[workspace]
members = [
    "blinky_led",
    "variable_blink",
    "pass_through", 
    "pass_through_latch",
    "low_level_passthrough",
    "low_level_passthrough_latch",
    "low_level_lowpass_latch",
]
resolver = "2"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
